# terra

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  batch.sh  create_subset.py  environment.yaml  main.py  main_dist.py  main_sweep.py  poetry.toml  pyproject.toml  save_n_nonzero_tokens.py  simple_infer_runner.py  test_count.py
app/: bjob_main_multigpu.sh  bjob_main_singlegpu.sh  bjob_run_inference.sh  main_dist.py
app/nemo/: train.py
app/nichejepa/: infer.py  train.py
configs/: cnd_gtb10_ep300.yaml  eval.yaml  graph_10m_read_depth.yaml  merfish.yaml  merfish_1.4m.yaml  merfish_2_gene_panels.yaml  merfish_300k.yaml  simulated.yaml  simulated_100k.yaml  starmap_merfish_mouse_brain_1_gene_panel.yaml  starmap_merfish_mouse_brain_2_gene_panels.yaml  template.yaml  test.yaml
configs/job/: hst_corpus_70m_gpu-cellgen-restricted.yaml  hst_corpus_70m_gpu-lotfollahi.yaml  hst_corpus_70m_gpu-parallel.yaml  hst_corpus_70m_test.yaml  xhs49-1b_1p.yaml
configs/model/: hst_corpus_70m_gt_base.yaml  hst_corpus_70m_gt_small.yaml  hst_corpus_70m_gt_tiny.yaml  hst_corpus_70m_load_cp.yaml  hst_corpus_70m_test.yaml  mmb0-1b_smb1-1b_2p.yaml  mmb0-1b_smb1-1b_2p_2.yaml  mmb0-1b_smb1-1b_2p_3.yaml  mmb0-1b_smb1-1b_2p_4.yaml
docs/: api.md  conf.py  contributing.md  index.md  installation.md  references.bib  requirements.txt  tutorials.md  user_guide.md
docs/notebooks/: Terra.ipynb  downstream_analysis.ipynb  spatial_mapping_tutorial.ipynb  supervised_finetuning.ipynb  terra_tutorial.ipynb  visium_transfer_learning_tutorial.ipynb  zero_shot_quickstart.ipynb  zero_shot_quickstart_multisample.ipynb
job_config/: gpu-lotfollahi.yaml  gpu-parallel.yaml  test.yaml
logs/cnd_gtb10_ep300/: jepa_r0.csv  params-ijepa.yaml
nichejepa/tokenizers/: __init__.py
reproducibility_notebook_pre_merge/: NicheJepa.ipynb  Squidpy_Analyse.ipynb
scripts/: bsub_script.sh  bsub_script_tiger.sh  bsub_script_tiger_normal_reservation.sh  bsub_script_tiger_parallel_reservation.sh
src/app/: awzzz.sh  count_decoder.py  finetune.py  helper.py  huggingface.py  infer.py  main.py  main_dist.py  review.md  review.md.sty  train.py  train_aws.py  train_aws_wrapper.sh  train_model_slurm_torchrun_aws.sh  train_model_slurm_torchrun_aws_gtbase.sh  train_model_slurm_torchrun_aws_gtbase_reordered.sh  train_model_slurm_torchrun_aws_gtsmall.sh  train_model_slurm_torchrun_aws_gtsmall_0.01_sample.sh  train_model_slurm_torchrun_aws_gtsmall_1024_seqlen.sh  train_model_slurm_torchrun_aws_gtsmall_reordered.sh  train_model_slurm_torchrun_aws_gttiny.sh  train_model_slurm_torchrun_aws_gttiny_reordered.sh
src/nichejepa/: aggregate.py  eval_sweep.py  feature_extractor.py  infer.py  (+6 more)
(+262 files in other folders)
