[tool.poetry]
name = "nichejepa"
version = "0.0.0"
description = "Spatial transcriptomics foundation model"
readme = "README.md"
license = "LICENSE"
authors = [
    "Sebastian Birk",
    "Mohammad Vali Sanian <mohammad.sanian@helsinki.fi>"
]
maintainers = [
    "Sebastian Birk <sebastian.birk@helmholtz-munich.de>",
    "Mohammad Vali Sanian <mohammad.sanian@helsinki.fi>"
]
documentation = "https://niche-jepa.readthedocs.io/"
repository = "https://github.com/Lotfollahi-lab/niche-jepa"
homepage = "https://github.com/Lotfollahi-lab/niche-jepa"

[tool.poetry.dependencies]
python = ">=3.11"
anndata = "*"
squidpy = "*"
scib-metrics = "*"
scikit-misc = "*"
transformers = "*"
torch = { version = "^2.0", source = "custom-pytorch" }
datasets = "*"
session-info = "*"
wandb = "*"

[[tool.poetry.source]]
name = "custom-pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
twine = ">=4.0.2"

[tool.poetry.group.doc.dependencies]
docutils = ">=0.8,!=0.18.*,!=0.19.*"
sphinx = ">=4"
sphinx-book-theme = ">=1.0.0"
myst-nb = "*"
sphinxcontrib-bibtex = ">=1.0.0"
sphinx-autodoc-typehints = "*"
sphinxext-opengraph = "*"
ipykernel = "*"
ipython = "*"
sphinx-copybutton = "*"
pandas = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
coverage = "*"

[tool.coverage.run]
source = ["niche-jepa"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    "E501",
    "E731",
    "E741",
    "D104",
    "D100",
    "D107",
    "B008",
    "D105",
    "D400",
    "D401",
    "D203",
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb",
]
